	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1359)
 * Specifying more than once any of -p -i - will issue a warning.
# (r1334,r1335)
 * New switch --verbose-interpreter to execute interpreter verbosely by setting adequately _debug_commands='ack'.
# (r1331,r1333)
 * Strings specified within single quotes will have single quotes escaped, just as double quotes.
   So that e.g.: '\'hello\'' equals "'hello'" and "\"hello\"" equals '"hello"'.
# (r1330,r1351,r1363)
 * Variable '_debug_commands' is now a string with several verbosity options.
# (r1323,r1325)
 * fix: misc for --offset, e.g. avoiding probing for external loader programs.
# (r1319)
 * --verbose-load option for verbose file loading.
# (r1317,r1321)
 * -C '_seek_magic=..' will now probe whole range of specified signature.
# (r1316)
 * fix in _seek_magic documentation.
# (r1314)
 * bugfix: --offset option was ignoring lower bytes-offset.
# (r1312)
 * fix: a check was missing in the PS decoder when reading from stdin.
# (r1253)
 * Command 'pan' accepts '-' and '+' to jump to prev/next file if border is reached.
# (r1210-r1213)
 * Command 'font' controls displayed font and scans font directories.
 * Keys '{' and '}' will cycle through scanned consolefonts.
# (r1187)
 * Variable _fbfont_magnify_factor will scale text font at runtime.
# (r1198)
 * Variable _fbfont_as_screen_fraction; if >0, font will be scaled to exceed 1/_fbfont_as_screen_fraction of both width and height.  If _fbfont_as_screen_fraction<0, font scaling will be fixed.
# (r1199)
 * Keys '[' ']' bound to new aliases "font_reduce" and "font_magnify".
 * Key '|' bound to new alias "toggle_font_auto_scale".
# (r1217)
 * Switch -r {width:height} / --resolution {width:height} will behave as expected in SDL mode.
# (r1184,r1215)
 * Variable _downscale_huge_at_load, if 1 (default), will downscale automatically huge images at load time. To avoid loading images exceeding too much screen size.